--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
 
-    "name": "hax0r news",
+    "name": "Hacked News",
     "version": "0.1",
-    "description": "Simple Hacker News theme",
+    "description": "A simple, readable Hacker News theme.",
 
     "permissions": [
         "tabs",
@@ -15,6 +15,7 @@
     "offline_enabled": true,
 
     "icons": {
+      "64": "icon_64x64.png",
       "128": "icon_64x64.png"
     },
 
