--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,18 @@
     "manifest_version": 2,
 
     "name": "Hacked News",
-    "version": "0.1",
-    "description": "A simple, readable Hacker News theme.",
+    "version": "0.1.0",
+    "description": "A simple, clean Hacker News theme.",
 
     "permissions": [
         "tabs",
         "storage"
     ],
+
+    "background": {
+        "scripts": ["events.js"],
+        "persistent": false
+    },
 
     "options_page": "options.html",
 
