--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
 
     "permissions": [
         "tabs",
-        "storage"
+        "storage",
+        "http://*/*",
+        "https://*/*"
     ],
 
     "background": {
