--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,9 @@
     "offline_enabled": true,
 
     "icons": {
-      "64": "icon_64x64.png",
-      "128": "icon_64x64.png"
+      "16": "icon_16.png",
+      "48": "icon_48.png",
+      "128": "icon_128.png"
     },
 
     "content_scripts": [
