--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name": "Hacked News",
     "version": "0.1.0",
     "description": "A simple, clean Hacker News theme.",
-    "homepage_url": "https://github.com/balaclark/hacked-news",
+    "homepage_url": "https://chrome.google.com/webstore/detail/hacked-news/klijiafmajbhbkhjbfajmdbogjlcibeb",
 
     "permissions": [
         "tabs",
